2006-10-24 Sandro Santilli <strk@refractions.net>

	* operation::overlay::FuzzyPointLocator:
	  eliminate non-polygonal components from consideration when
	  testing the location of points.
	* precision::GeometrySnapper: snapPrecisionFactor augmented
	  from 10e-12 to 10e-10.
	* precision::LineStringSnapper (findSegmentToSnap):
	  return the *closest* segment, don't snap if the closest
	  segment *intersects* the snap points, consider a distance
	  of exactly snapTolerance as non-tolerated
	  (got in sync with JTS)

2006-10-23 Sandro Santilli <strk@refractions.net>

	* source/headers/geos/geom/BinaryOp.h (SnapOp): document
	  and add optional CBR step (snap after applying common
	  bits removal - this is the default); (check_valid): add
	  validity checker function.

2006-10-20 Sandro Santilli <strk@refractions.net>

	* noding::SegmentString: added notifyCoordinatesChange
	  method.
	* noding::ScaledNoder: notify possible coordinates change
	  to SegmentString after removing repeated points.

2006-10-19 Sandro Santilli <strk@refractions.net>

        * configure.in: use 'expr' for arithmetics (more portable)

2006-10-18 Mateusz Loskot <mateusz@loskot.net>

	* makefile.vc: added top-level makefile for Visual C++,
	* source/Makefile.vc: updated comments

2006-10-18 Sandro Santilli <strk@refractions.net>

	* source/operation/overlay/OverlayOp.cpp: disable non-JTS overlay
	  result validators (to more closely track JTS at this stage)

2006-10-13 Sandro Santilli <strk@refractions.net>

	* source/headers/geos/geom/BinaryOp.h (SnapOp): fixed horrible
	  bug applying overlay of first geom to itself :(
	* capi/Makefile.am: don't directly link geostest against
	  both libgeos.so and libstdc++ (should be derived by
	  libgeos_c.so).

2006-10-12 Sandro Santilli <strk@refractions.net>

	* tests/bigtest/GeometryTestFactory.cpp,
	  tests/bigtest/bigtest.h, tests/bigtest/TestSweepLineSpeed.cpp:
	  fixed header inclusion, to reduce compiler noise.
